--- a/style.css
+++ b/style.css
@@ -32,7 +32,11 @@ body{
     font-size: 20px;
     font-weight: 500;
 }
-
+#history-area{
+    color: black;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
 .input-button{
     display: flex;
 
